third_party/move/move-compiler-v2/tests/checking/utf8-comment/utf8-in-constant-numeric.exp

Diagnostics:
error: invalid character
  ┌─ tests/checking/utf8-comment/utf8-in-constant-numeric.move:4:29
  │
4 │        const C: u64 = 123456代码注释;
  │                             ^^ Invalid character: `代`
