third_party/move/move-compiler-v2/tests/checking/utf8-comment/utf8-in-constant-numeric.move
address 0x42 {
    module M1 {
        fun u(): u64 { 0 }
       const C: u64 = 123456代码注释;
    }
}
